add new font + variables for fonts

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,6 @@
+$MainFontFamily: 'Cormorant SC', sans-serif;
+$SecondFontFamily: 'Inter', sans-serif;
+
 // H heading
 $h1TextSize: 60px;
 $h1TextWeight: 500;
@@ -53,7 +56,7 @@ $capTextSMallWeight: 700;
 // Primary colors
 $primaryWhite: #ffffff;
 $primaryBlack: #121212;
-$primaryLightGray: #dedede;
+$primaryLightGrey: #dedede;
 $primaryDarkGrey: #575757;
 
 // Secondary colors
