--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-$MainFontFamily: 'Cormorant SC', sans-serif;
+$MainFontFamily: 'Cormorant SC', serif;
 $SecondFontFamily: 'Inter', sans-serif;
 
 // H heading
