font fix + update variables

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,5 @@
+@import './fonts/font.scss';
+
 $MainFontFamily: 'Cormorant SC', serif;
 $SecondFontFamily: 'Inter', sans-serif;
 
@@ -38,6 +40,10 @@ $pTextTinyWight: 500;
 $buttonTextSize: 12px;
 $buttonTextWeight: 700;
 
+// Subtitle
+$subtitleTextSize: 12px;
+$subtitleTextWeight: 700;
+
 // Input
 $inputTextSize: 12px;
 $inputTextWeight: 700;
@@ -49,8 +55,8 @@ $capTextWeight: 500;
 $capTextMidSize: 12px;
 $capTextMidWeight: 500;
 
-$capTextSmallSize: 18px;
-$capTextSMallWeight: 700;
+$capTextSmallSize: 8px;
+$capTextSmallWeight: 700;
 
 // Colors
 // Primary colors
@@ -70,6 +76,7 @@ $accentGold: #ab8956;
 $accentError: #ae2917;
 
 // BreakPoints
-$breakPointMax: 1439px;
-$breakPointTAb: 767px;
+$breakPointMax: 1440px;
+$breakPointPC: 1240px;
+$breakPointTab: 768px;
 $breakPointMob: 320px;
