--- a/src/styles/fonts/font.scss
+++ b/src/styles/fonts/font.scss
@@ -2,6 +2,7 @@
   font-family: 'Cormorant SC';
   src: url('./CormorantWOFF/CormorantSC-Bold.woff') format('woff');
   font-weight: 700;
+  font-display: swap;
   font-style: normal;
 }
 
@@ -9,6 +10,7 @@
   font-family: 'Cormorant SC';
   src: url('./CormorantWOFF/CormorantSC-Light.woff') format('woff');
   font-weight: 300;
+  font-display: swap;
   font-style: normal;
 }
 
@@ -16,6 +18,7 @@
   font-family: 'Cormorant SC';
   src: url('./CormorantWOFF/CormorantSC-Medium.woff') format('woff');
   font-weight: 500;
+  font-display: swap;
   font-style: normal;
 }
 
@@ -23,6 +26,7 @@
   font-family: 'Cormorant SC';
   src: url('./CormorantWOFF/CormorantSC-SemiBold.woff') format('woff');
   font-weight: 600;
+  font-display: swap;
   font-style: normal;
 }
 
@@ -30,6 +34,7 @@
   font-family: 'Inter';
   src: url('./InterWOFF/Inter-Light_1.woff') format('woff');
   font-weight: 300;
+  font-display: swap;
   font-style: normal;
 }
 
@@ -37,6 +42,7 @@
   font-family: 'Inter';
   src: url('./InterWOFF/Inter-Medium_1.woff') format('woff');
   font-weight: 500;
+  font-display: swap;
   font-style: normal;
 }
 
@@ -44,5 +50,6 @@
   font-family: 'Inter';
   src: url('.//InterWOFF/Inter-Bold_1.woff') format('woff');
   font-weight: 700;
+  font-display: swap;
   font-style: normal;
 }
