--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -52,3 +52,15 @@
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none;
 }
+
+@mixin flexCenter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@mixin disabledOpacity05 {
+  pointer-events: none;
+  opacity: 0.5;
+  @include noUserSelect;
+}
