--- a/src/components/ScrollButton/ScrollButton.module.scss
+++ b/src/components/ScrollButton/ScrollButton.module.scss
@@ -1,5 +1,5 @@
-@import './../../styles/_variables';
-@import './../../styles/_mixins';
+@import '@styles/_variables.scss';
+@import '@styles/_mixins.scss';
 
 .Scroll {
   padding: 0;
