create MainPage component + mini fox variables

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -53,7 +53,7 @@ $capTextSMallWeight: 700;
 // Primary colors
 $primaryWhite: #ffffff;
 $primaryBlack: #121212;
-$primaryLightGray: #dedede;
+$primaryLightGrey: #dedede;
 $primaryDarkGrey: #575757;
 
 // Secondary colors
