--- a/src/ui-components/Link/Link.module.scss
+++ b/src/ui-components/Link/Link.module.scss
@@ -1,16 +1,19 @@
 @import '@styles/_variables.scss';
 
-.Link {
+.link {
   font-family: $SecondFontFamily;
   font-weight: 500;
   font-size: inherit;
   letter-spacing: 0.5px;
   text-underline-offset: 5px;
-  color: $primaryDarkGrey;
 
-  &:hover {
-    transform: scale(0.8837);
-    color: $primaryBlack;
+  &_light {
+    color: $primaryDarkGrey;
+
+    &:hover {
+      transform: scale(0.9);
+      color: $primaryBlack;
+    }
   }
 
   &_dark {
