--- a/src/components/ScrollButton/ScrollButton.module.scss
+++ b/src/components/ScrollButton/ScrollButton.module.scss
@@ -1,20 +1,25 @@
 @import '@styles/_variables.scss';
 @import '@styles/_mixins.scss';
 
-.Scroll {
+.scroll {
   padding: 0;
   box-sizing: border-box;
   @include flexCenter;
   border-radius: 50%;
-  border: 1px solid $primaryLightGrey;
-  color: $primaryDarkGrey;
   padding: 18px;
   width: 60px;
   height: 60px;
   transform: rotate(-90deg);
+  box-shadow: none;
 
-  &:hover {
-    background-color: $primaryWhite;
+  &_light {
+    background-color: $secondaryWhite;
+    border: 1px solid $primaryLightGrey;
+    color: $primaryDarkGrey;
+
+    &:hover {
+      background-color: $primaryWhite;
+    }
   }
 
   &_dark {
