update variables + 1 scg file

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -80,3 +80,9 @@ $breakPointMax: 1440px;
 $breakPointPC: 1240px;
 $breakPointTab: 768px;
 $breakPointMob: 320px;
+
+// Button variables
+$defaultButtonLightShadow: 0px 4px 10px 0px #00000040;
+$defaultButtonLightFocus: #232323;
+$defaultButtonDarkShadow: 0px 4px 10px 0px #ab895640;
+$defaultButtonDarkFocus: #ba9052;
