--- a/src/index.scss
+++ b/src/index.scss
@@ -2,9 +2,14 @@
 @import './styles/mixins';
 @import './styles/variables';
 
-*,
 html,
 body {
   font-family: 'Cormorant SC', serif;
   margin: 0;
+}
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
