--- a/src/ui-components/Grid/Grid.module.scss
+++ b/src/ui-components/Grid/Grid.module.scss
@@ -1,8 +1,10 @@
-@import '@styles/_mixins.scss';
+// @import '@styles/_mixins.scss';
 
 .grid {
   display: grid;
   margin: 0 auto;
+  max-width: 1240px;
+  padding: 80px 20px 80px 20px;
 
   @include paintingsGridMobile {
     gap: 20px;
@@ -10,7 +12,12 @@
   @include paintingsGridTab {
     gap: 24px;
   }
+  @include paintingsGridPC {
+    gap: 30px;
+  }
+
   @include paintingsGridMax {
     gap: 32px;
+    padding: 100px 0 100px 0;
   }
 }
