update Link styles

--- a/src/ui-components/Link/Link.module.scss
+++ b/src/ui-components/Link/Link.module.scss
@@ -1,17 +1,16 @@
-@import '@styles/_variables.scss';
+// @import '@styles/_variables.scss';
 
 .link {
   font-family: $SecondFontFamily;
   font-weight: 500;
   font-size: inherit;
   letter-spacing: 0.5px;
-  text-underline-offset: 5px;
+  text-underline-offset: 4px;
 
   &_light {
     color: $primaryDarkGrey;
 
     &:hover {
-      transform: scale(0.9);
       color: $primaryBlack;
     }
   }
