--- a/src/ui-components/Card/Card.module.scss
+++ b/src/ui-components/Card/Card.module.scss
@@ -1,5 +1,5 @@
-@import '@styles/_variables.scss';
-@import '@styles/_mixins.scss';
+// @import '@styles/_variables.scss';
+// @import '@styles/_mixins.scss';
 
 .card {
   margin: 0;
@@ -11,6 +11,11 @@
   height: 100%;
   overflow: hidden;
   transition: all ease-in 0.3s;
+
+  @include breakPointPC {
+    max-width: 392px;
+    max-height: 260px;
+  }
 
   &__wrapper {
     display: flex;
@@ -94,6 +99,8 @@
     font-family: $MainFontFamily;
     font-size: $h6TextSize;
     font-weight: $h4TextWeight;
+    margin-block-start: 0;
+    margin-block-end: 0;
 
     @include breakPointTab {
       font-size: $h4TextSize;
