--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -5,17 +5,8 @@
   min-width: 320px;
   width: 100%;
   margin: 0 auto;
-  max-width: 1240px;
+  max-width: 1280px;
   box-sizing: border-box;
-
-  @include breakPointTab {
-    min-width: 728px;
-  }
-
-  &_light {
-    background-color: $primaryWhite;
-  }
-  &_dark {
-    background-color: $primaryBlack;
-  }
+  background-color: inherit;
+  padding: 0 20px 0 20px;
 }
