--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -1,5 +1,6 @@
 .mainPage {
   min-height: 100vh;
+  box-sizing: border-box;
 
   &_light {
     background-color: $primaryWhite;
@@ -9,19 +10,13 @@
     background-color: $primaryBlack;
   }
 
-  &__grid {
-    padding: 80px 20px 80px 20px;
-
-    @include breakPointPC {
-      padding: 100px 20px 100px 20px;
-    }
-  }
-
   &__wrapperPaint {
-    box-sizing: border-box;
-    padding: 80px 0 80px 0;
+    padding-top: 80px;
+    padding-bottom: 80px;
+
     @include breakPointPC {
-      padding: 100px 0 100px 0;
+      padding-top: 100px;
+      padding-bottom: 100px;
     }
   }
 }
