position fix for Footer component

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -24,7 +24,6 @@
     gap: 9px;
     font-size: $pTextSmallSize;
     font-weight: $pTextWeightLight;
-    margin-left: 20px;
 
     @include breakPointTab {
       font-size: $pTextSize;
@@ -33,7 +32,6 @@
 
     @include breakPointPC {
       gap: 20px;
-      margin-left: 20px;
     }
 
     &_paragraph {
@@ -58,14 +56,6 @@
   &__icons {
     display: flex;
     gap: 20px;
-    margin-left: 20px;
-
-    @include breakPointTab {
-      margin-right: 20px;
-    }
-    @include breakPointPC {
-      margin: 0;
-    }
   }
 
   &__container {
@@ -73,14 +63,13 @@
     justify-content: space-between;
     flex-direction: column;
     gap: 20px;
-    padding: 40px 0 40px 0;
+    padding-top: 32px;
+    padding-bottom: 32px;
 
     @include breakPointTab {
       flex-direction: row;
-    }
-
-    @include breakPointPC {
-      padding: 40px 0 40px 0;
+      padding-top: 40px;
+      padding-bottom: 40px;
     }
   }
 }
