--- a/src/styles/fonts/font.scss
+++ b/src/styles/fonts/font.scss
@@ -48,7 +48,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('.//InterWOFF/Inter-Bold_1.woff') format('woff');
+  src: url('./InterWOFF/Inter-Bold_1.woff') format('woff');
   font-weight: 700;
   font-display: swap;
   font-style: normal;
