--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -14,7 +14,7 @@
     padding-top: 80px;
     padding-bottom: 80px;
 
-    @include breakPointPC {
+    @include breakPointTab {
       padding-top: 100px;
       padding-bottom: 100px;
     }
