--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'Cormorant SC';
-  src: url('./CormorantWOFF/CormorantSC-Bold.woff') format('woff');
+  src: url('./../assets/fonts/CormorantWOFF/CormorantSC-Bold.woff')
+    format('woff');
   font-weight: 700;
   font-display: swap;
   font-style: normal;
@@ -8,7 +9,8 @@
 
 @font-face {
   font-family: 'Cormorant SC';
-  src: url('./CormorantWOFF/CormorantSC-Light.woff') format('woff');
+  src: url('./../assets/fonts/CormorantWOFF/CormorantSC-Light.woff')
+    format('woff');
   font-weight: 300;
   font-display: swap;
   font-style: normal;
@@ -16,7 +18,8 @@
 
 @font-face {
   font-family: 'Cormorant SC';
-  src: url('./CormorantWOFF/CormorantSC-Medium.woff') format('woff');
+  src: url('./../assets/fonts/CormorantWOFF/CormorantSC-Medium.woff')
+    format('woff');
   font-weight: 500;
   font-display: swap;
   font-style: normal;
@@ -24,7 +27,8 @@
 
 @font-face {
   font-family: 'Cormorant SC';
-  src: url('./CormorantWOFF/CormorantSC-SemiBold.woff') format('woff');
+  src: url('./../assets/fonts/CormorantWOFF/CormorantSC-SemiBold.woff')
+    format('woff');
   font-weight: 600;
   font-display: swap;
   font-style: normal;
@@ -32,7 +36,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('./InterWOFF/Inter-Light_1.woff') format('woff');
+  src: url('./../assets/fonts/InterWOFF/Inter-Light_1.woff') format('woff');
   font-weight: 300;
   font-display: swap;
   font-style: normal;
@@ -40,7 +44,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('./InterWOFF/Inter-Medium_1.woff') format('woff');
+  src: url('./../assets/fonts/InterWOFF/Inter-Medium_1.woff') format('woff');
   font-weight: 500;
   font-display: swap;
   font-style: normal;
@@ -48,7 +52,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('./InterWOFF/Inter-Bold_1.woff') format('woff');
+  src: url('./../assets/fonts/InterWOFF/Inter-Bold_1.woff') format('woff');
   font-weight: 700;
   font-display: swap;
   font-style: normal;
