fix import fonts

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-@import './fonts/font.scss';
+@import './fonts.scss';
 
 $MainFontFamily: 'Cormorant SC', serif;
 $SecondFontFamily: 'Inter', sans-serif;
