--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -100,6 +100,10 @@
       @include breakPointTab {
         top: 32px;
       }
+
+      &_active {
+        position: fixed;
+      }
     }
   }
 
