update fonts url + rename scss var for fonts

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 @import './fonts.scss';
 
-$MainFontFamily: 'Cormorant SC', serif;
-$SecondFontFamily: 'Inter', sans-serif;
+$mainFontFamily: 'Cormorant SC', serif;
+$secondFontFamily: 'Inter', sans-serif;
 
 // H heading
 $h1TextSize: 60px;
