--- a/src/ui-components/Button/Button.module.scss
+++ b/src/ui-components/Button/Button.module.scss
@@ -2,7 +2,7 @@
 // @import '@styles/_mixins.scss';
 
 .button {
-  font-family: $SecondFontFamily;
+  font-family: $secondFontFamily;
   font-size: $buttonTextSize;
   font-weight: $buttonTextWeight;
   text-transform: uppercase;
