--- a/src/ui-components/Link/Link.module.scss
+++ b/src/ui-components/Link/Link.module.scss
@@ -1,7 +1,7 @@
 // @import '@styles/_variables.scss';
 
 .link {
-  font-family: $SecondFontFamily;
+  font-family: $secondFontFamily;
   font-weight: 500;
   font-size: inherit;
   letter-spacing: 0.5px;
