--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: $SecondFontFamily;
+  font-family: $secondFontFamily;
   box-sizing: border-box;
 
   &_light {
