--- a/src/components/ToggleTheme/ToggleTheme.module.scss
+++ b/src/components/ToggleTheme/ToggleTheme.module.scss
@@ -42,7 +42,7 @@
 
   &__text {
     display: flex;
-    font-family: $SecondFontFamily;
+    font-family: $secondFontFamily;
     font-size: $buttonTextSize;
     font-weight: $buttonTextWeight;
     text-decoration: underline;
