--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,63 +4,63 @@ $mainFontFamily: 'Cormorant SC', serif;
 $secondFontFamily: 'Inter', sans-serif;
 
 // H heading
-$h1TextSize: 60px;
-$h1TextWeight: 500;
+$h1Text: 60px;
+$h1Medium: 500;
 
-$h2TextSize: 48px;
-$h2TextWeight: 500;
+$h2Text: 48px;
+$h2Medium: 500;
 
-$h3TextSize: 32px;
-$h3TextWeight: 600;
+$h3Text: 32px;
+$h3SemiBold: 600;
 
-$h4TextSize: 16px;
-$h4TextWeight: 500;
+$h4Text: 16px;
+$h4Medium: 500;
 
-$h5TextSize: 16px;
-$h5TextWeight: 700;
+$h5Text: 16px;
+$h5Bold: 700;
 
-$h6TextSize: 12px;
-$h6TextWeight: 500;
+$h6Text: 12px;
+$h6Medium: 500;
 
 //Navigation buttons
-$navTextSize: 16px;
-$navTextWeight: 700;
+$navText: 16px;
+$navMedium: 700;
 
 // Paragraph base
-$pTextSize: 16px;
-$pTextWeightLight: 300;
-$pTextWeightMid: 500;
+$pBaseText: 16px;
+$pLight: 300;
+$pMedium: 500;
 
 // Paragraph small
-$pTextSmallSize: 12px;
-$pTextSmallWeightLight: 300;
-$pTextSmallWeightMid: 500;
+$pSmallText: 12px;
+$pLight: 300;
+$pMedium: 500;
 
 // Paragraph tiny
-$pTextTinySize: 8px;
-$pTextTinyWight: 500;
+$pTinyText: 8px;
+$pMedium: 500;
 
 // Button
-$buttonTextSize: 12px;
-$buttonTextWeight: 700;
+$buttonText: 12px;
+$buttonBold: 700;
 
 // Subtitle
-$subtitleTextSize: 12px;
-$subtitleTextWeight: 700;
+$subtitleText: 12px;
+$subtitleBold: 700;
 
 // Input
-$inputTextSize: 12px;
-$inputTextWeight: 700;
+$inputText: 12px;
+$inputBold: 700;
 
 // Caption
-$capTextSize: 16px;
-$capTextWeight: 500;
+$capBaseText: 16px;
+$capMedium: 500;
 
-$capTextMidSize: 12px;
-$capTextMidWeight: 500;
+$capMidText: 12px;
+$capMedium: 500;
 
-$capTextSmallSize: 8px;
-$capTextSmallWeight: 700;
+$capSmallText: 8px;
+$capBold: 700;
 
 // Colors
 // Primary colors
