--- a/src/ui-components/Button/Button.module.scss
+++ b/src/ui-components/Button/Button.module.scss
@@ -3,8 +3,8 @@
 
 .button {
   font-family: $secondFontFamily;
-  font-size: $buttonTextSize;
-  font-weight: $buttonTextWeight;
+  font-size: $buttonText;
+  font-weight: $buttonBold;
   text-transform: uppercase;
   border: none;
   padding: 0;
