--- a/src/ui-components/Card/Card.module.scss
+++ b/src/ui-components/Card/Card.module.scss
@@ -97,20 +97,20 @@
   &__title {
     box-sizing: border-box;
     font-family: $mainFontFamily;
-    font-size: $h6TextSize;
-    font-weight: $h4TextWeight;
+    font-size: $h6Text;
+    font-weight: $h4Medium;
     margin-block-start: 0;
     margin-block-end: 0;
 
     @include breakPointTab {
-      font-size: $h4TextSize;
+      font-size: $h4Text;
     }
   }
 
   &__subtitle {
     font-family: $secondFontFamily;
-    font-size: $capTextSmallSize;
-    font-weight: $subtitleTextWeight;
+    font-size: $capSmallText;
+    font-weight: $subtitleBold;
     margin-block-start: 4px;
     margin-block-end: 0;
 
@@ -124,7 +124,7 @@
 
     @include breakPointTab {
       margin-block-start: 8px;
-      font-size: $subtitleTextSize;
+      font-size: $subtitleText;
     }
   }
 
