--- a/src/components/ToggleTheme/ToggleTheme.module.scss
+++ b/src/components/ToggleTheme/ToggleTheme.module.scss
@@ -49,7 +49,7 @@
     text-underline-offset: 3px;
     letter-spacing: 0.1px;
 
-    @include breakPointPC {
+    @include mediaDesktop {
       display: none;
     }
   }
