--- a/src/ui-components/Card/Card.module.scss
+++ b/src/ui-components/Card/Card.module.scss
@@ -12,7 +12,7 @@
   overflow: hidden;
   transition: all ease-in 0.3s;
 
-  @include breakPointPC {
+  @include mediaDesktop {
     max-width: 392px;
     max-height: 260px;
   }
@@ -24,11 +24,11 @@
     width: calc(100% - 20px);
     max-height: 45px;
 
-    @include breakPointTab {
+    @include mediaTablet {
       max-height: 66px;
       width: calc(100% - 28px);
     }
-    @include breakPointPC {
+    @include mediaDesktop {
       max-height: 82px;
       width: calc(100% - 92px);
     }
@@ -37,7 +37,7 @@
   &__img {
     transition: all 0.5s ease-out;
     @include noUserSelect;
-    @include breakPointPC {
+    @include mediaDesktop {
       &:hover {
         transform: scale(1.3);
       }
@@ -49,15 +49,15 @@
   text-transform: uppercase;
   box-sizing: border-box;
   width: 100%;
-  padding: 8px 0 8px 0px;
+  padding: 8px 0;
   max-width: 236px;
 
-  @include breakPointTab {
-    padding: 12px 0 12px 0px;
+  @include mediaTablet {
+    padding: 12px 0;
     max-width: 300px;
   }
-  @include breakPointPC {
-    padding: 20px 0 20px 0px;
+  @include mediaDesktop {
+    padding: 20px 0;
   }
 
   &_light {
@@ -72,11 +72,11 @@
     padding-left: 12px;
     letter-spacing: 0.01px;
 
-    @include breakPointTab {
+    @include mediaTablet {
       height: 42px;
     }
 
-    @include breakPointPC {
+    @include mediaDesktop {
       padding-left: 18px;
 
       &_light {
@@ -102,7 +102,7 @@
     margin-block-start: 0;
     margin-block-end: 0;
 
-    @include breakPointTab {
+    @include mediaTablet {
       font-size: $h4Text;
     }
   }
@@ -122,7 +122,7 @@
       color: $accentGold;
     }
 
-    @include breakPointTab {
+    @include mediaTablet {
       margin-block-start: 8px;
       font-size: $subtitleText;
     }
@@ -141,7 +141,7 @@
       background-color: $accentGold;
     }
 
-    @include breakPointPC {
+    @include mediaDesktop {
       display: none;
     }
   }
