--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -37,10 +37,12 @@
     align-items: center;
     flex-direction: row-reverse;
     gap: 40px;
-    padding: 144px 0 20px 47px;
+    padding-top: 144px;
+    padding-left: 47px;
 
     @include mediaTablet {
-      padding: 200px 0 20px 94px;
+      padding-top: 200px;
+      padding-left: 94px;
     }
 
     @include mediaDesktop {
@@ -53,25 +55,22 @@
       justify-content: flex-start;
       align-items: flex-start;
       position: fixed;
-      left: 100%;
+      right: -252px;
       top: 0;
       width: 252px;
-      height: 200vh;
+      min-height: 100%;
       overflow: hidden;
       z-index: 10;
-      transition: left 0.5s;
+      transition: right 0.5s;
       @include noUserSelect;
 
       @include mediaTablet {
+        right: -466px;
         width: 466px;
       }
 
       &_active {
-        left: calc(100% - 252px);
-
-        @include mediaTablet {
-          left: calc(100% - 466px);
-        }
+        right: 0;
       }
 
       &_light {
